src/main/default/objects/Crew_Planning__c/Crew_Planning__c.object-meta.xml
<CustomObject>
    <label>Crew Planning</label>
    <nameField>
        <displayFormat>JC-{0}</displayFormat>
        <label>Job Crew Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>