src/main/default/objects/Crew_Planning__c/fields/Comparable_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Comparable_Start_Date__c</fullName>
    <description>Used for internal date comparison with the Job Scheduling/Whiteboard feature.</description>
    <formula>VALUE(TEXT(YEAR(DATEVALUE(IF(ISBLANK(Planned_Start_Date__c),Planned_End_Date__c,Planned_Start_Date__c))))+LPAD(TEXT(MONTH(DATEVALUE(IF(ISBLANK(Planned_Start_Date__c),Planned_End_Date__c,Planned_Start_Date__c)))),2,'0')+LPAD(TEXT(DAY(DATEVALUE(IF(ISBLANK(Planned_Start_Date__c),Planned_End_Date__c,Planned_Start_Date__c)))),2,'0'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date and time the employee is due to start working on the job.</inlineHelpText>
    <label>Comparable_Start_Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>