src/main/default/objects/Crew_Planning__c/fields/Crew_Member__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Employee scheduled to work on the job.</inlineHelpText>
    <label>Crew Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Crew Planning</relationshipLabel>
    <relationshipName>Crew_Planning1</relationshipName>
    <type>Lookup</type>
</CustomField>