src/main/default/objects/Crew_Planning__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Job on which the employee is scheduled to work.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Crew Planning</relationshipLabel>
    <relationshipName>Crew_Planning</relationshipName>
    <type>Lookup</type>
</CustomField>