src/main/default/objects/Crew_Planning__c/fields/Last_Notified__c.field-meta.xml
<CustomField>
    <fullName>Last_Notified__c</fullName>
    <inlineHelpText>Date and time the employee was last notified about being scheduled to work on the job. This is a system defined value that gets updated when a notification is sent via a workflow.</inlineHelpText>
    <label>Last Notified</label>
    <type>DateTime</type>
</CustomField>