src/main/default/objects/Crew_Planning__c/fields/Last_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed__c</fullName>
    <inlineHelpText>Date and time the record was last viewed.</inlineHelpText>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>