src/main/default/objects/Crew_Planning__c/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <inlineHelpText>Daily allowance to cover expenses when travelling for work.</inlineHelpText>
    <label>Per Diem</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>