src/main/default/objects/Crew_Planning__c/fields/Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date__c</fullName>
    <inlineHelpText>Date and time the employee is due to stop working on the job.</inlineHelpText>
    <label>Planned End Date</label>
    <type>DateTime</type>
</CustomField>