src/main/default/objects/Crew_Planning__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <inlineHelpText>Date and time the employee is due to start working on the job.</inlineHelpText>
    <label>Planned Start Date</label>
    <type>DateTime</type>
</CustomField>