src/main/default/objects/Crew_Planning__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <formula>if(ISBLANK(Role_on_Job__r.Description_Override__c),
Role_on_Job__r.Catalog_Description__c,
Role_on_Job__r.Description_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Role the employee is performing on the job.</inlineHelpText>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>