src/main/default/objects/Crew_Planning__c/fields/Role_on_Job__c.field-meta.xml
<CustomField>
    <fullName>Role_on_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Labor catalog item for the employee's role on the job.</inlineHelpText>
    <label>Role on Job</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Crew Planning</relationshipLabel>
    <relationshipName>Crew_Planning_Role</relationshipName>
    <type>Lookup</type>
</CustomField>