src/main/default/objects/Crew_Planning__c/validationRules/Basic_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Basic_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Planned_Start_Date__c  >  Planned_End_Date__c</errorConditionFormula>
    <errorMessage>The start date must be before the end date.</errorMessage>
</ValidationRule>