src/main/default/objects/Crew_Planning__c/validationRules/Single_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Single_Assignment</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
  AND (
    ISPICKVAL(Charge_Code__c,""),
    LEN(Job__c) = 0
  ),
  AND (
    NOT ISPICKVAL(Charge_Code__c,""),
    LEN(Job__c) > 0
  )

)</errorConditionFormula>
    <errorMessage>You may only select one location value. Please clear the other value.</errorMessage>
</ValidationRule>